Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL)
-
None
Description
GCC 12 says:
/mariadb/10.9/storage/spider/spd_db_mysql.cc: In member function 'virtual int spider_db_mbase::append_lock_tables(spider_string*)':
|
/mariadb/10.9/storage/spider/spd_db_mysql.cc:3722:9: error: comparing the result of pointer addition '(db_share->spider_mbase_share::db_names_str + ((sizetype)(conn_link_idx * 52)))' and NULL [-Werror=address]
|
3722 | if (&db_share->db_names_str[conn_link_idx])
|
| ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
|
/mariadb/10.9/storage/spider/spd_db_mysql.cc:3732:9: error: comparing the result of pointer addition '(db_share->spider_mbase_share::table_names_str + ((sizetype)(conn_link_idx * 52)))' and NULL [-Werror=address]
|
3732 | if (&db_share->table_names_str[conn_link_idx])
|
| ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
|
The current affect (or fix) version, 10.9, might not be correct. Check the older versions too.