MDEV-28301 Spider: Fix GCC warnings, comparing the result of pointer addition ... and NULL

The condition of the if statements are always true.